--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -9,10 +9,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8' # Specify the Python version you need
+        python-version: '3.10' # Specify the Python version you need
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -20,5 +22,19 @@ jobs:
         # pip install -r requirements.txt
         pip install instagrapi
         pip install moviepy
+
     - name: Run Python script
       run: python main.py
+
+    - name: Configure git
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+
+    - name: Commit and push changes
+      env:
+        GH_PAT: ${{ secrets.GH_PAT }}
+      run: |
+        git add .
+        git commit -m "Automated download from GitHub Actions"
+        git push https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git HEAD:main
