update commit message for GA

--- a/.github/workflows/uploader.yml
+++ b/.github/workflows/uploader.yml
@@ -31,3 +31,5 @@ jobs:
       run: python upload_GA.py
 
     - uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "Uploader: Removing video file"
