--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -9,7 +9,7 @@ jobs:
 
     permissions:
       contents: write
-      
+
     steps:
     - uses: actions/checkout@v2
 
@@ -30,3 +30,5 @@ jobs:
       run: python download_GA.py
 
     - uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "Downloader: Adding videos"
