--- a/.github/workflows/uploader.yml
+++ b/.github/workflows/uploader.yml
@@ -32,4 +32,4 @@ jobs:
 
     - uses: stefanzweifel/git-auto-commit-action@v5
       with:
-        commit_message: "Uploader: Removing video file"
+        commit_message: "UPLOADER: Removing video file"
