--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -1,7 +1,9 @@
 name: Media Downloader
 
 on:
-  workflow_dispatch:
+  schedule:
+    # Run every day at 6 AM EST (11 AM UTC)
+    - cron: '0 11 * * *'
     
 jobs:
   run-python-script:
