--- a/.github/workflows/uploader.yml
+++ b/.github/workflows/uploader.yml
@@ -1,7 +1,10 @@
 name: Media Uploader
 
 on:
-  workflow_dispatch:
+  schedule:
+    # Run every 45 minutes between 8 AM - 11 PM EST (1 PM - 4 AM UTC)
+    - cron: '0,45 13-23 * * *'
+    - cron: '0,45 0-3 * * *'
     
 jobs:
   run-python-script:
