--- a/.github/workflows/downloader.yml
+++ b/.github/workflows/downloader.yml
@@ -1,9 +1,7 @@
 name: Media Downloader
 
 on:
-  schedule:
-    # Run every day at 6 AM EST (11 AM UTC)
-    - cron: '0 11 * * *'
+  workflow_dispatch:
     
 jobs:
   run-python-script:
