--- a/.github/workflows/uploader.yml
+++ b/.github/workflows/uploader.yml
@@ -2,19 +2,17 @@ name: Media Uploader
 
 on:
   workflow_dispatch:
-    # Run every 45 minutes between 8 AM - 11 PM EST (1 PM - 4 AM UTC)
-    # - cron: '0,30 12-23 * * *'
-    # - cron: '0,30 0-6 * * *'
-    
+    # Initial placeholder for cron jobs, to be updated by the other workflow
 jobs:
   run-python-script:
     runs-on: ubuntu-latest
 
     permissions:
       contents: write
-      
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out the repository
+      uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -26,13 +24,12 @@ jobs:
         python -m pip install --upgrade pip
         # If you have dependencies, install them here
         # pip install -r requirements.txt
-        pip install instagrapi
-        pip install moviepy
-        pip install tiktok_uploader
+        pip install instagrapi moviepy tiktok_uploader
 
     - name: Run Python script
       run: python tiktok/tiktok.py
 
-    - uses: stefanzweifel/git-auto-commit-action@v5
+    - name: Commit and push changes
+      uses: stefanzweifel/git-auto-commit-action@v5
       with:
         commit_message: "UPLOADER: Removing video file"
