--- a/.github/workflows/update-cron.yml
+++ b/.github/workflows/update-cron.yml
@@ -8,6 +8,9 @@ jobs:
   update-cron:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write
+
     steps:
     - name: Check out the repository
       uses: actions/checkout@v2
