--- a/.github/workflows/uploader.yml
+++ b/.github/workflows/uploader.yml
@@ -9,6 +9,7 @@ jobs:
 
     permissions:
       contents: write
+      workflows: write  # Add this line to grant workflows permission
 
     steps:
     - name: Check out the repository
