--- a/.github/workflows/update-cron.yml
+++ b/.github/workflows/update-cron.yml
@@ -33,6 +33,11 @@ jobs:
         echo "$cron_output" >> .github/workflows/uploader.yml
 
     - name: Commit and push changes
-      uses: stefanzweifel/git-auto-commit-action@v5
-      with:
-        commit_message: "CRON EXPRESSION: randomizing minute"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GA_PAT }}
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+        git add .github/workflows/uploader.yml
+        git commit -m "CRON EXPRESSION: randomizing minute"
+        git push
