trying to update cron

--- a/.github/workflows/update-cron.yml
+++ b/.github/workflows/update-cron.yml
@@ -34,7 +34,7 @@ jobs:
 
     - name: Commit and push changes
       env:
-        GITHUB_TOKEN: ${{ secrets.GA_PAT }}
+        GITHUB_TOKEN: ${{ secrets.PAT }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
