--- a/.github/workflows/update-cron.yml
+++ b/.github/workflows/update-cron.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Check out the repository
       uses: actions/checkout@v2
+      with:
+          token: ${{ secrets.PAT }}
 
     - name: Set up Python
       uses: actions/setup-python@v2
@@ -34,8 +36,6 @@ jobs:
         echo "$cron_output" >> .github/workflows/uploader.yml
 
     - name: Commit and push changes
-      env:
-        GITHUB_TOKEN: ${{ secrets.PAT }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
