trying to update cron

--- a/.github/workflows/uploader.yml
+++ b/.github/workflows/uploader.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Initial placeholder for cron jobs, to be updated by the other workflow
     - cron: '45 12 * * *'
-
+  workflow_dispatch:
 
 jobs:
   run-python-script:
