trying to update cron

--- a/.github/workflows/update-cron.yml
+++ b/.github/workflows/update-cron.yml
@@ -1,7 +1,9 @@
 name: Update Cron Schedule
 
-schedule:
-  - cron: '0 10 * * *'
+on:
+  schedule:
+    - cron: '0 10 * * *'
+  workflow_dispatch:
 
 jobs:
   update-cron:
