--- a/.github/workflows/uploader.yml
+++ b/.github/workflows/uploader.yml
@@ -1,6 +1,7 @@
 name: Media Uploader
 
 on:
+  workflow_dispatch:
   schedule:
     # Initial placeholder for cron jobs, to be updated by the other workflow
     - cron: '5 12 * * *'
