--- a/.github/workflows/update-cron.yml
+++ b/.github/workflows/update-cron.yml
@@ -39,9 +39,6 @@ jobs:
         sed -i "/# Initial placeholder for cron jobs/r cron_output.txt" .github/workflows/uploader.yml
 
     - name: Commit and push changes
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-        git add .github/workflows/uploader.yml
-        git commit -m "CRON EXPRESSION: randomizing minute"
-        git push
+      uses: stefanzweifel/git-auto-commit-action@v5
+      with:
+        commit_message: "UPLOADER: Removing video file"
