--- a/.github/workflows/update-cron.yml
+++ b/.github/workflows/update-cron.yml
@@ -41,4 +41,4 @@ jobs:
     - name: Commit and push changes
       uses: stefanzweifel/git-auto-commit-action@v5
       with:
-        commit_message: "UPLOADER: Removing video file"
+        commit_message: "Updating Cron"
