--- a/.github/workflows/uploader.yml
+++ b/.github/workflows/uploader.yml
@@ -34,6 +34,8 @@ jobs:
         pip install instagrapi moviepy tiktok_uploader
 
     - name: Run Python script
+      env:
+        GITHUB_PAT: ${{ secrets.PAT }}
       run: python upload_GA.py
 
     - name: Commit and push changes
